force-app/main/default/objects/openq__OPENQ_Publication__c/openq__OPENQ_Publication__c.object-meta.xml
<CustomObject>
    <label>Publication</label>
    <nameField>
        <displayFormat>PU-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>