force-app/main/default/objects/openq__OPENQ_Publication__c/fields/openq__Author__c.field-meta.xml
<CustomField>
    <fullName>openq__Author__c</fullName>
    <label>Authors</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>