force-app/main/default/objects/openq__OPENQ_Publication__c/fields/openq__Author_Position__c.field-meta.xml
<CustomField>
    <fullName>openq__Author_Position__c</fullName>
    <label>Author Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>