force-app/main/default/objects/openq__OPENQ_Publication__c/fields/openq__Journal__c.field-meta.xml
<CustomField>
    <fullName>openq__Journal__c</fullName>
    <label>Journal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>