force-app/main/default/objects/openq__OPENQ_Publication__c/fields/openq__Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Publication_Date__c</fullName>
    <label>Publication Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>