force-app/main/default/objects/openq__OPENQ_Publication__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>NAME</columns>
    <columns>openq__OPENQ_Record_Id__c</columns>
    <columns>openq__Author__c</columns>
    <columns>openq__Title__c</columns>
    <columns>openq__Journal__c</columns>
    <columns>openq__Journal_Reference__c</columns>
    <columns>openq__Publication_Date__c</columns>
    <columns>openq__Type__c</columns>
    <columns>openq__Author_Position__c</columns>
    <columns>openq__Trials__c</columns>
    <columns>openq__Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>